Revision history for E'Mail-Acme

1349    2007-07-28
        various fixes required for 5.6 compat (how bizarre they were!)
        add Email::Abstract adapter, for dealing with stupider mail modules
        update manifest to include t/send.t, duh

1123    2007-07-16
        improve tests
        documentation tweaks

822     2007-07-13
        first release; CPAN rejoices
